feat: Analyzer icerisinde details ve file-serve işlemleri ayarlandı. Büyük bir commit
